# bugbounty_writeups

./: README.md  Table_Interactive.html  pyproject.toml  writeups.py
CSRF/: CSRF Vulnerability Dashboard.html  analys_csrf.py  csrf_analysis_complete.csv  csrf_analysis_summary_report.json  csrf_hackerone.csv  csrf_writeups.csv
IDOR/: IDOR Vulnerability Dashboard.html  analys_idor.py  idor_analysis_complete.csv  idor_analysis_summary_report.json  idor_hackerone.csv  idor_interactive_dashboard.html  idor_writeups.csv
RCE/: Remote Code Execution (RCE) Vulnerability Analysis.html  analys_rce.py  data.py  rce_analysis_complete.csv  rce_analysis_summary_report.json  rce_hackerone.csv  rce_writeups.csv
Request Smugling/: Request Smugling Vulnerability Dashboard.html  analys_request_smugling.py  request smuggling_hackerone.csv  request smuggling_writeups.csv  smuggling_analysis_complete.csv  smuggling_analysis_summary_report.json
SSRF/: SSRF Vulnerability Dashboard.html  analys_ssrf.py  ssrf_advanced_analysis_report.json  ssrf_analysis_complete.csv  ssrf_analysis_summary_report.json  ssrf_hackerone.csv  ssrf_writeups.csv
XXE/: analys_xxe.py  xxe_analysis_complete.csv  xxe_analysis_summary_report.json  xxe_hackerone.csv  xxe_interactive_dashboard.html  xxe_writeups.csv
