[project]
name = "bugbounty-writeups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "uv>=0.7.13",
]
